--- a/big_o_notation.ipynb
+++ b/big_o_notation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcc8008df10>"
+       "<Figure size 1152x576 with 0 Axes>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -70,6 +72,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1152x576 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -81,7 +92,7 @@
     "y2 = [math.log(n) for n in x]\n",
     "plt.plot(x, y2, label = 'O(log on)')\n",
     "\n",
-    "y3 = [n for n in x]\n",
+    "y3 = x\n",
     "plt.plot(x, y3, label = 'O9(n)')\n",
     "\n",
     "y4 = [n * math.log(n) for n in x]\n",
@@ -103,7 +114,13 @@
     "plt.title('Big O Notation')\n",
     "plt.xlabel('Elements')\n",
     "plt.ylabel('Operations')\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "\n",
+    "plt.figure(figsize = (16, 8))\n",
+    "\n",
+    "# or plt.plot x, y1...  all the way down to y8..  \n",
+    "# add color = for line color and label each one\n",
+    "# can also change the x and ylimit to show the lines better"
    ]
   },
   {
