--- a/pandas_series.ipynb
+++ b/pandas_series.ipynb
@@ -2034,9 +2034,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Use a method to convert each of the numeric values in the curved_grades Series into a categorical \n",
-    "# value of letter grades. For example, 86 should be a 'B' and 95 should be an 'A'. Save this as a Series \n",
-    "# named letter_grades."
+    "# 5. Use a method to convert each of the numeric values in the \n",
+    "# curved_grades Series into a categorical value of letter grades. \n",
+    "# For example, 86 should be a 'B' and 95 should be an 'A'. \n",
+    "# Save this as a Series named letter_grades."
    ]
   },
   {
