--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
        "[234 rows x 13 columns]"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
        "[234 rows x 13 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -2216,11 +2216,12 @@
        "      <th>cyl</th>\n",
        "      <th>trans</th>\n",
        "      <th>drv</th>\n",
-       "      <th>cty</th>\n",
-       "      <th>hwy</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
        "      <th>fl</th>\n",
        "      <th>class</th>\n",
        "      <th>mileage_difference</th>\n",
+       "      <th>average_mileage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2230,17 +2231,17 @@
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [manufacturer, model, displ, year, cyl, trans, drv, cty, hwy, fl, class, mileage_difference]\n",
+       "Columns: [manufacturer, model, displ, year, cyl, trans, drv, city, highway, fl, class, mileage_difference, average_mileage]\n",
        "Index: []"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg[mpg.cty > mpg.hwy]\n",
+    "mpg[mpg.city > mpg.highway]\n",
     "# left blank rows and columns because there were none"
    ]
   },
@@ -2263,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 233,
    "metadata": {
     "scrolled": true
    },
@@ -2296,11 +2297,12 @@
        "      <th>cyl</th>\n",
        "      <th>trans</th>\n",
        "      <th>drv</th>\n",
-       "      <th>cty</th>\n",
-       "      <th>hwy</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
        "      <th>fl</th>\n",
        "      <th>class</th>\n",
        "      <th>mileage_difference</th>\n",
+       "      <th>average_mileage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2318,6 +2320,7 @@
        "      <td>p</td>\n",
        "      <td>compact</td>\n",
        "      <td>11</td>\n",
+       "      <td>23.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2333,6 +2336,7 @@
        "      <td>p</td>\n",
        "      <td>compact</td>\n",
        "      <td>8</td>\n",
+       "      <td>25.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2348,6 +2352,7 @@
        "      <td>p</td>\n",
        "      <td>compact</td>\n",
        "      <td>11</td>\n",
+       "      <td>25.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2363,6 +2368,7 @@
        "      <td>p</td>\n",
        "      <td>compact</td>\n",
        "      <td>9</td>\n",
+       "      <td>25.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -2378,9 +2384,11 @@
        "      <td>p</td>\n",
        "      <td>compact</td>\n",
        "      <td>10</td>\n",
+       "      <td>21.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2408,6 +2416,7 @@
        "      <td>p</td>\n",
        "      <td>midsize</td>\n",
        "      <td>9</td>\n",
+       "      <td>23.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>231</th>\n",
@@ -2423,6 +2432,7 @@
        "      <td>p</td>\n",
        "      <td>midsize</td>\n",
        "      <td>8</td>\n",
+       "      <td>25.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>232</th>\n",
@@ -2438,6 +2448,7 @@
        "      <td>p</td>\n",
        "      <td>midsize</td>\n",
        "      <td>10</td>\n",
+       "      <td>21.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>233</th>\n",
@@ -2453,6 +2464,7 @@
        "      <td>p</td>\n",
        "      <td>midsize</td>\n",
        "      <td>8</td>\n",
+       "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>234</th>\n",
@@ -2468,49 +2480,50 @@
        "      <td>p</td>\n",
        "      <td>midsize</td>\n",
        "      <td>9</td>\n",
+       "      <td>21.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>234 rows × 12 columns</p>\n",
+       "<p>234 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    manufacturer   model  displ  year  cyl       trans drv  cty  hwy fl  \\\n",
-       "1           audi      a4    1.8  1999    4    auto(l5)   f   18   29  p   \n",
-       "2           audi      a4    1.8  1999    4  manual(m5)   f   21   29  p   \n",
-       "3           audi      a4    2.0  2008    4  manual(m6)   f   20   31  p   \n",
-       "4           audi      a4    2.0  2008    4    auto(av)   f   21   30  p   \n",
-       "5           audi      a4    2.8  1999    6    auto(l5)   f   16   26  p   \n",
-       "..           ...     ...    ...   ...  ...         ...  ..  ...  ... ..   \n",
-       "230   volkswagen  passat    2.0  2008    4    auto(s6)   f   19   28  p   \n",
-       "231   volkswagen  passat    2.0  2008    4  manual(m6)   f   21   29  p   \n",
-       "232   volkswagen  passat    2.8  1999    6    auto(l5)   f   16   26  p   \n",
-       "233   volkswagen  passat    2.8  1999    6  manual(m5)   f   18   26  p   \n",
-       "234   volkswagen  passat    3.6  2008    6    auto(s6)   f   17   26  p   \n",
+       "    manufacturer   model  displ  year  cyl       trans drv  city  highway fl  \\\n",
+       "1           audi      a4    1.8  1999    4    auto(l5)   f    18       29  p   \n",
+       "2           audi      a4    1.8  1999    4  manual(m5)   f    21       29  p   \n",
+       "3           audi      a4    2.0  2008    4  manual(m6)   f    20       31  p   \n",
+       "4           audi      a4    2.0  2008    4    auto(av)   f    21       30  p   \n",
+       "5           audi      a4    2.8  1999    6    auto(l5)   f    16       26  p   \n",
+       "..           ...     ...    ...   ...  ...         ...  ..   ...      ... ..   \n",
+       "230   volkswagen  passat    2.0  2008    4    auto(s6)   f    19       28  p   \n",
+       "231   volkswagen  passat    2.0  2008    4  manual(m6)   f    21       29  p   \n",
+       "232   volkswagen  passat    2.8  1999    6    auto(l5)   f    16       26  p   \n",
+       "233   volkswagen  passat    2.8  1999    6  manual(m5)   f    18       26  p   \n",
+       "234   volkswagen  passat    3.6  2008    6    auto(s6)   f    17       26  p   \n",
        "\n",
-       "       class  mileage_difference  \n",
-       "1    compact                  11  \n",
-       "2    compact                   8  \n",
-       "3    compact                  11  \n",
-       "4    compact                   9  \n",
-       "5    compact                  10  \n",
-       "..       ...                 ...  \n",
-       "230  midsize                   9  \n",
-       "231  midsize                   8  \n",
-       "232  midsize                  10  \n",
-       "233  midsize                   8  \n",
-       "234  midsize                   9  \n",
+       "       class  mileage_difference  average_mileage  \n",
+       "1    compact                  11             23.5  \n",
+       "2    compact                   8             25.0  \n",
+       "3    compact                  11             25.5  \n",
+       "4    compact                   9             25.5  \n",
+       "5    compact                  10             21.0  \n",
+       "..       ...                 ...              ...  \n",
+       "230  midsize                   9             23.5  \n",
+       "231  midsize                   8             25.0  \n",
+       "232  midsize                  10             21.0  \n",
+       "233  midsize                   8             22.0  \n",
+       "234  midsize                   9             21.5  \n",
        "\n",
-       "[234 rows x 12 columns]"
+       "[234 rows x 13 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg['mileage_difference'] = (mpg.hwy - mpg.cty)\n",
+    "mpg['mileage_difference'] = (mpg.highway - mpg.city)\n",
     "mpg\n",
     "# df['passing_english'] = df.english > 70"
    ]
@@ -2533,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -2564,8 +2577,8 @@
        "      <th>cyl</th>\n",
        "      <th>trans</th>\n",
        "      <th>drv</th>\n",
-       "      <th>cty</th>\n",
-       "      <th>hwy</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
        "      <th>fl</th>\n",
        "      <th>class</th>\n",
        "      <th>mileage_difference</th>\n",
@@ -2610,16 +2623,16 @@
        "</div>"
       ],
       "text/plain": [
-       "    manufacturer       model  displ  year  cyl     trans drv  cty  hwy fl  \\\n",
-       "107        honda       civic    1.8  2008    4  auto(l5)   f   24   36  c   \n",
-       "223   volkswagen  new beetle    1.9  1999    4  auto(l4)   f   29   41  d   \n",
+       "    manufacturer       model  displ  year  cyl     trans drv  city  highway  \\\n",
+       "107        honda       civic    1.8  2008    4  auto(l5)   f    24       36   \n",
+       "223   volkswagen  new beetle    1.9  1999    4  auto(l4)   f    29       41   \n",
        "\n",
-       "          class  mileage_difference  average_mileage  \n",
-       "107  subcompact                  12             30.0  \n",
-       "223  subcompact                  12             35.0  "
+       "    fl       class  mileage_difference  average_mileage  \n",
+       "107  c  subcompact                  12             30.0  \n",
+       "223  d  subcompact                  12             35.0  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2637,7 +2650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2726,7 +2739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -2757,8 +2770,8 @@
        "      <th>cyl</th>\n",
        "      <th>trans</th>\n",
        "      <th>drv</th>\n",
-       "      <th>cty</th>\n",
-       "      <th>hwy</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
        "      <th>fl</th>\n",
        "      <th>class</th>\n",
        "      <th>mileage_difference</th>\n",
@@ -2787,20 +2800,20 @@
        "</div>"
       ],
       "text/plain": [
-       "    manufacturer  model  displ  year  cyl       trans drv  cty  hwy fl  \\\n",
-       "213   volkswagen  jetta    1.9  1999    4  manual(m5)   f   33   44  d   \n",
+       "    manufacturer  model  displ  year  cyl       trans drv  city  highway fl  \\\n",
+       "213   volkswagen  jetta    1.9  1999    4  manual(m5)   f    33       44  d   \n",
        "\n",
        "       class  mileage_difference  average_mileage  \n",
        "213  compact                  11             38.5  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg[mpg['class'] == 'compact'].sort_values(by='hwy', ascending = True).tail(1)"
+    "mpg[mpg['class'] == 'compact'].sort_values(by='highway', ascending = True).tail(1)"
    ]
   },
   {
@@ -2821,7 +2834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -2852,8 +2865,8 @@
        "      <th>cyl</th>\n",
        "      <th>trans</th>\n",
        "      <th>drv</th>\n",
-       "      <th>cty</th>\n",
-       "      <th>hwy</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
        "      <th>fl</th>\n",
        "      <th>class</th>\n",
        "      <th>mileage_difference</th>\n",
@@ -3043,18 +3056,18 @@
        "</div>"
       ],
       "text/plain": [
-       "    manufacturer   model  displ  year  cyl       trans drv  cty  hwy fl  \\\n",
-       "1           audi      a4    1.8  1999    4    auto(l5)   f   18   29  p   \n",
-       "2           audi      a4    1.8  1999    4  manual(m5)   f   21   29  p   \n",
-       "3           audi      a4    2.0  2008    4  manual(m6)   f   20   31  p   \n",
-       "4           audi      a4    2.0  2008    4    auto(av)   f   21   30  p   \n",
-       "5           audi      a4    2.8  1999    6    auto(l5)   f   16   26  p   \n",
-       "..           ...     ...    ...   ...  ...         ...  ..  ...  ... ..   \n",
-       "230   volkswagen  passat    2.0  2008    4    auto(s6)   f   19   28  p   \n",
-       "231   volkswagen  passat    2.0  2008    4  manual(m6)   f   21   29  p   \n",
-       "232   volkswagen  passat    2.8  1999    6    auto(l5)   f   16   26  p   \n",
-       "233   volkswagen  passat    2.8  1999    6  manual(m5)   f   18   26  p   \n",
-       "234   volkswagen  passat    3.6  2008    6    auto(s6)   f   17   26  p   \n",
+       "    manufacturer   model  displ  year  cyl       trans drv  city  highway fl  \\\n",
+       "1           audi      a4    1.8  1999    4    auto(l5)   f    18       29  p   \n",
+       "2           audi      a4    1.8  1999    4  manual(m5)   f    21       29  p   \n",
+       "3           audi      a4    2.0  2008    4  manual(m6)   f    20       31  p   \n",
+       "4           audi      a4    2.0  2008    4    auto(av)   f    21       30  p   \n",
+       "5           audi      a4    2.8  1999    6    auto(l5)   f    16       26  p   \n",
+       "..           ...     ...    ...   ...  ...         ...  ..   ...      ... ..   \n",
+       "230   volkswagen  passat    2.0  2008    4    auto(s6)   f    19       28  p   \n",
+       "231   volkswagen  passat    2.0  2008    4  manual(m6)   f    21       29  p   \n",
+       "232   volkswagen  passat    2.8  1999    6    auto(l5)   f    16       26  p   \n",
+       "233   volkswagen  passat    2.8  1999    6  manual(m5)   f    18       26  p   \n",
+       "234   volkswagen  passat    3.6  2008    6    auto(s6)   f    17       26  p   \n",
        "\n",
        "       class  mileage_difference  average_mileage  \n",
        "1    compact                  11             23.5  \n",
@@ -3072,13 +3085,13 @@
        "[234 rows x 13 columns]"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mpg['average_mileage'] = (mpg.cty + mpg.hwy) / 2\n",
+    "mpg['average_mileage'] = (mpg.city + mpg.highway) / 2\n",
     "mpg"
    ]
   },
@@ -3100,7 +3113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -3131,8 +3144,8 @@
        "      <th>cyl</th>\n",
        "      <th>trans</th>\n",
        "      <th>drv</th>\n",
-       "      <th>cty</th>\n",
-       "      <th>hwy</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
        "      <th>fl</th>\n",
        "      <th>class</th>\n",
        "      <th>mileage_difference</th>\n",
@@ -3161,14 +3174,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   manufacturer        model  displ  year  cyl     trans drv  cty  hwy fl  \\\n",
-       "38        dodge  caravan 2wd    2.4  1999    4  auto(l3)   f   18   24  r   \n",
+       "   manufacturer        model  displ  year  cyl     trans drv  city  highway  \\\n",
+       "38        dodge  caravan 2wd    2.4  1999    4  auto(l3)   f    18       24   \n",
        "\n",
-       "      class  mileage_difference  average_mileage  \n",
-       "38  minivan                   6             21.0  "
+       "   fl    class  mileage_difference  average_mileage  \n",
+       "38  r  minivan                   6             21.0  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3179,7 +3192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -3210,8 +3223,8 @@
        "      <th>cyl</th>\n",
        "      <th>trans</th>\n",
        "      <th>drv</th>\n",
-       "      <th>cty</th>\n",
-       "      <th>hwy</th>\n",
+       "      <th>city</th>\n",
+       "      <th>highway</th>\n",
        "      <th>fl</th>\n",
        "      <th>class</th>\n",
        "      <th>mileage_difference</th>\n",
@@ -3288,20 +3301,20 @@
        "</div>"
       ],
       "text/plain": [
-       "   manufacturer                model  displ  year  cyl       trans drv  cty  \\\n",
-       "66        dodge  ram 1500 pickup 4wd    4.7  2008    8    auto(l5)   4    9   \n",
-       "60        dodge          durango 4wd    4.7  2008    8    auto(l5)   4    9   \n",
-       "55        dodge    dakota pickup 4wd    4.7  2008    8    auto(l5)   4    9   \n",
-       "70        dodge  ram 1500 pickup 4wd    4.7  2008    8  manual(m6)   4    9   \n",
+       "   manufacturer                model  displ  year  cyl       trans drv  city  \\\n",
+       "66        dodge  ram 1500 pickup 4wd    4.7  2008    8    auto(l5)   4     9   \n",
+       "60        dodge          durango 4wd    4.7  2008    8    auto(l5)   4     9   \n",
+       "55        dodge    dakota pickup 4wd    4.7  2008    8    auto(l5)   4     9   \n",
+       "70        dodge  ram 1500 pickup 4wd    4.7  2008    8  manual(m6)   4     9   \n",
        "\n",
-       "    hwy fl   class  mileage_difference  average_mileage  \n",
-       "66   12  e  pickup                   3             10.5  \n",
-       "60   12  e     suv                   3             10.5  \n",
-       "55   12  e  pickup                   3             10.5  \n",
-       "70   12  e  pickup                   3             10.5  "
+       "    highway fl   class  mileage_difference  average_mileage  \n",
+       "66       12  e  pickup                   3             10.5  \n",
+       "60       12  e     suv                   3             10.5  \n",
+       "55       12  e  pickup                   3             10.5  \n",
+       "70       12  e  pickup                   3             10.5  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4321,7 +4334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -4437,7 +4450,7 @@
        "107     4.000    1.6    False      True>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
